--- a/usr/startpage/style.css
+++ b/usr/startpage/style.css
@@ -94,41 +94,6 @@ main section {
 	box-sizing: border-box;
 }
 
-/* Transparent blyrry UI */
-/*
-html {
-	background: url(Blur.png);
-	background-size: 100% calc(100vh + 24px);
-	background-position: 0% -24px;
-}
-
-.box .title,
-.box .content {
-	background: #00000022;
-}
-
-.box:hover .title {
-	background: #fff;
-	color: #000;
-}
-
-#date, #time {
-	color: #fff;
-}
-
-.box .title {
-	color: #fff;
-}
-
-a, a:visited {
-	color: #ddd;
-}
-
-a:hover, a:visited:hover {
-	color: #fff;
-}
-*/
-
 .title {
 	display: none;
 }
@@ -162,12 +127,18 @@ section:hover {
 	background-color: var(--bg2);
 }*/
 
-html {
+/*html {
 	background-image: url(Coal.png);
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-position: center center;
 	background-size: cover;
+}*/
+
+html {
+	background-image: url(Coal.png);
+	background-size: 100% calc(100vh + 34.5px);
+	background-position: 0% -35.5px;
 }
 
 section {
